--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Exam Schedule </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Subject Material</title>
+    <meta name="description" content="  " />
+    <style></style>
+    <script></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -19,73 +21,21 @@
          <li> 🧑‍🧒  Users </li>
          <li> 📊 Grades </li>
          <li> 📚 Subject </li>
-         <li> 📂 Subject Material </li>
+         <li class="active"> 📂 Subject Material </li>
          <li> ❓ Question </li>
-         <li class="active">📝  Exam </li>
+         <li> 📝  Exam </li>
          <li> 🗓️ Event </li>
          <li> 📋 Attendance </li>
          <li> 🎫 Ticketing support </li>
         </ul>
       </div>
       <div class="main-content">
-       <section class="exam-schedule">
-    <h2 class="section-title">Exam Schedule</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Subject</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Room</th>
-        </tr>
-      </thead>
-      <tbody id="examTableBody">
-      </tbody>
-    </table>
+      <section class="study-materials">
+    <h2 class="section-title">Study Materials</h2>
+    <div class="materials-list" id="materialsList">
+    </div>
   </section>
-  <section class="guidelines-section">
-  <button id="guidelineBtn">📘 View Guidelines</button>
-
-  <div id="guidelineModal" class="modal">
-    <div class="modal-content">
-      <span class="close-btn">&times;</span>
-      <h3>General Instructions</h3>
-      <p>
-  <strong>📚 Attendance & Discipline:</strong><br>
-  - Students must attend all scheduled classes on time.<br>
-  - Late arrivals may be marked as absent unless justified.<br>
-  - Attendance will directly impact academic performance.<br><br>
-
-  <strong>📝 Assignments & Study:</strong><br>
-  - Homework must be submitted before the deadline.<br>
-  - Students are encouraged to review lessons daily.<br>
-  - Group study is allowed but plagiarism is not tolerated.<br><br>
-
-  <strong>📅 Exams:</strong><br>
-  - All students must be present during exam days.<br>
-  - Bring necessary materials (pens, calculators, etc.).<br>
-  - Cheating will result in disciplinary action.<br><br>
-
-  <strong>💻 Online System Usage:</strong><br>
-  - Use your school account to log in to the system.<br>
-  - Do not share your password with others.<br>
-  - If you find any issue, report it to the IT supervisor.<br><br>
-
-  <strong>🤝 Behavior & Respect:</strong><br>
-  - Respect your teachers, classmates, and school property.<br>
-  - Any form of bullying or discrimination is strictly prohibited.<br>
-  - Dress code must be followed at all times.<br><br>
-
-  <strong>📞 Communication & Support:</strong><br>
-  - For academic help, contact your subject teacher.<br>
-  - For schedule or system issues, contact the school office.<br>
-  - Parents can contact administration for urgent matters.
-</p>
-
     </div>
-  </div>
-</section>
-    </div>
-    <script src="script.js"></script>
+      <script src="script.js"></script>
   </body>
 </html>
